[project]
name = "gps_plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" },
    { name = "Maria Fernanda Gonzalez", email = "mariagr@vedur.is" },
]
maintainers = [{ name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" }]
requires-python = ">=3.13"
dependencies = [
    "highlight-text>=0.2",
    "matplotlib>=3.10.3",
    "tornado>=6.5.1",
    "gtimes@git+https://github.com/bennigo/gtimes.git",
]

# Optional map lane (src/gps_plot/maps.py): PyGMT needs a system GMT >= 6
# C library underneath (OS package, conda-forge gmt, or a from-source build
# via GMT_LIBRARY_PATH). The matplotlib time-series lane never needs this.
[project.optional-dependencies]
maps = ["pygmt>=0.19"]

[project.scripts]
gps_plot = "gps_plot:main"
plot-gps-timeseries = "gps_plot.plot_gps_timeseries:main"
gps-analysis-devviz = "gps_plot.dev_viz:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Dev-viz surface (gps_plot.dev_viz) needs the sibling gps_analysis leaf
# library. Wired as an editable local path in the dev group so `uv sync`
# picks up sibling edits immediately (see gpslibrary/CLAUDE.md, "Editing
# Across Packages"); production installs of gps_plot are unaffected.
[dependency-groups]
dev = [
    "gps_analysis",
    "gps_parser",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.uv.sources]
gps_analysis = { path = "../gps_analysis", editable = true }
gps_parser = { path = "../gps_parser", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

# Lint/format scope: the modern lane (maps, dev_viz, timesmatplt, tests).
# Legacy maintenance modules and historical snapshots are excluded — the
# dated gasmatplt snapshots do not even parse as Python 3 (kept as
# historical reference per CLAUDE.md, DO NOT delete).
[tool.ruff]
extend-exclude = [
    "src/gps_plot/gasmatplt.py",
    "src/gps_plot/gasmatplt_bgo_15May17.py",
    "src/gps_plot/gasmatplt_workingon15May17.py",
    "src/gps_plot/gmtplot.py",
    "src/gps_plot/plot_gps_timeseries.py",
    "bin/timesmatplt-test.py",
]
