[project]
name = "gps_plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" },
    { name = "Maria Fernanda Gonzalez", email = "mariagr@vedur.is" },
]
maintainers = [{ name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" }]
requires-python = ">=3.13"
dependencies = [
    "highlight-text>=0.2",
    "matplotlib>=3.10.3",
    "tornado>=6.5.1",
    "gtimes@git+https://github.com/bgo-gnss/gtimes.git",
    # Siblings the package imports at RUNTIME. They are imported lazily inside
    # functions, which only delays the ImportError to first use — it does not
    # make them optional: plot-gps-timeseries needs gps_parser (config) and
    # geo_dataread (series I/O) on every single run, timesmatplt needs geofunc
    # for plate motion, and gps_analysis backs both the declared
    # gps-analysis-devviz script and maps.py's model fields. Declaring them as
    # dev-group-only made gps_plot uninstallable for production/containers.
    # Git URLs are what pip and the container build resolve; [tool.uv.sources]
    # below overrides them with editable sibling paths for local development.
    "geo_dataread@git+https://github.com/bgo-gnss/geo_dataread.git",
    "geofunc@git+https://github.com/bgo-gnss/geofunc.git",
    "gps_analysis@git+https://github.com/bgo-gnss/gps_analysis.git",
    "gps_parser@git+https://github.com/bgo-gnss/gps_parser.git",
]

# Optional map lane (src/gps_plot/maps.py): PyGMT needs a system GMT >= 6
# C library underneath (OS package, conda-forge gmt, or a from-source build
# via GMT_LIBRARY_PATH). The matplotlib time-series lane never needs this.
[project.optional-dependencies]
maps = ["pygmt>=0.19"]

[project.scripts]
gps_plot = "gps_plot:main"
plot-gps-timeseries = "gps_plot.plot_gps_timeseries:main"
gps-analysis-devviz = "gps_plot.dev_viz:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

# Local development only: override the git URLs above with editable sibling
# checkouts so `uv sync` picks up cross-package edits immediately (see
# gpslibrary/CLAUDE.md, "Editing Across Packages"). uv honours this; pip and
# the container build ignore it and resolve the git URLs from [dependencies].
#
# geofunc is deliberately NOT overridden here. [tool.uv.sources] only applies to
# the root project, so the transitive `geofunc@git+https://...` that geo_dataread
# declares stays a git URL — overriding it locally makes uv see two conflicting
# URLs for one package and the resolve fails outright. geo_dataread does not
# override geofunc either; matching that keeps the ecosystem consistent.
[tool.uv.sources]
geo_dataread = { path = "../geo_dataread", editable = true }
gps_analysis = { path = "../gps_analysis", editable = true }
gps_parser = { path = "../gps_parser", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

# Lint/format scope: the modern lane (maps, dev_viz, timesmatplt, tests).
# Ruff scope = the modern Python-3 lane (maps.py, dev_viz.py, timesmatplt.py,
# tests). The legacy "maintenance only" plotting modules — Python-2-era code we
# are not modernizing now (BGÓ: ignore all Python-2 code) — are excluded; the two
# dated snapshots do not even parse as Python 3 (DO NOT delete, per CLAUDE.md).
[tool.ruff]
extend-exclude = [
    "src/gps_plot/gasmatplt.py",                   # legacy GAS plots (maintenance only)
    "src/gps_plot/gasmatplt_bgo_15May17.py",       # Python-2 snapshot (unparseable)
    "src/gps_plot/gasmatplt_workingon15May17.py",  # Python-2 snapshot (unparseable)
    "src/gps_plot/gmtplot.py",                     # legacy velomap recipe (maintenance)
    "bin/timesmatplt-test.py",                     # legacy smoke script
]
